# django-uit_job_type

./: .gitignore  .travis.yml  MANIFEST.in  README.md  coverage.cfg  coverage.ini  pyproject.toml  setup.py  test.sh  tox.ini
.github/workflows/: lint_and_format.yml
conda.recipe/: meta.yaml
pydocs/source/: conf.py  index.rst  modules.rst
pydocs/source/modules/: .PbsScript.rst.swp  UitPlusJob.rst
tethysapp/uit_plus_job/: app.py  controllers.py
tethysapp/uit_plus_job/resources/: executionblock.sh
tethysapp/uit_plus_job/tests/: tests.py
uit_plus_job/: models.py  oauth2.py  submit_stage.py  util.py
uit_plus_job/migrations/: 0001_initial.py  0001_initial_2.py  0001_initial_41.py  0001_initial_migration.py  0002_auto_20181128_2150.py  0002_auto_20200305_2131.py  0002_custom_logs.py  0002_intermediate_results.py  0002_uitplusjob__base_dir_alter_uitplusjob_node_type_and_more.py  0003_auto_20181128_2302.py  0003_environment_profiles.py  0003_environmentprofile.py  0003_intermediate_results_set_defaults.py  0004_auto_20181129_0003.py  0004_auto_20210104_2227.py  0004_auto_20210218_1356.py  0005_auto_20210105_1630.py  0005_environmentprofile_software.py  0005_uitplusjob__remote_workspace_id.py  0006_auto_20181129_0046.py  0006_uitplusjob_archived.py  0007_auto_20181129_2042.py  0007_auto_20220214_1923.py  0008_auto_20181130_2206.py  0008_auto_20230310_1657.py  0008_auto_20230414_1548.py  0009_array_fields.py  0009_auto_20190108_2224.py  0009_auto_20230310_2109.py  load_uit_array_data.py
uit_plus_job/resources/: clean_after_exec.sh  cleanblock.sh  executionblock.sh
(+8 files in other folders)
