[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "uit_plus_job"
version = "0.6.0"
description =  "UIT Plus Extension for Tethys."

authors = [
    {name = "Scott Christensen", email="scott.d.christensen@erdc.dren.mil"},
]

requires-python = ">= 3.8"
keywords = []
dependencies = [
  "channels",
  "django",
  "panel",
  "param",
  "social-auth-app-django",
  "tethys-platform",
  "pyuit",
]
readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
source = "https://github.com/erdc/django-uit_job_type"

[tool.setuptools.packages.find]
include = ["uit_plus_job*"]

[tool.setuptools.package-data]
uit_plus_job = ["*.sh"]

[tool.black]
line-length = 120
